1- Lexical Analysis/Code/gen/main/grammar/FunctionCraftParser.java
// Generated from C:/Users/my asus/Downloads/810100089-810100152/Phase1- Lexical Analayzer/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, END=2, MAIN=3, RETURN=4, IF=5, ELSE=6, ELSEIF=7, TRUE=8, FALSE=9, 
		CHOP=10, CHOMP=11, PUSH=12, PUTS=13, METHOD=14, LEN=15, LOOP=16, DO=17, 
		FOR=18, IN=19, PATTERN=20, MATCH=21, NEXT=22, BREAK=23, LAMBDA=24, ID=25, 
		INT_LITERAL=26, FLOAT_LITERAL=27, STRING_LITERAL=28, ASSIGN_ADD=29, ASSIGN_SUB=30, 
		ASSIGN_MUL=31, ASSIGN_DIV=32, ASSIGN_MOD=33, ADD=34, SUB=35, MUL=36, DIV=37, 
		MOD=38, ASSIGN=39, EQL=40, NEQ=41, LESS=42, GREATER=43, LEQ=44, GEQ=45, 
		AND=46, OR=47, NOT=48, APPEND=49, INC=50, DEC=51, LEFT_PAREN=52, RIGHT_PAREN=53, 
		LEFT_BRACKET=54, RIGHT_BRACKET=55, LEFT_CUR_BRACKET=56, RIGHT_CUR_BRACKET=57, 
		COMMA=58, RANGE_DOT=59, SEMICOLON=60, COLON=61, DOT=62, COMMENT=63, WS=64, 
		PATTERN_INDENT=65, OTHER=66;
	public static final int
		RULE_program = 0, RULE_function = 1, RULE_lambda_function = 2, RULE_parameter_list = 3, 
		RULE_default_parameter_list = 4, RULE_default_parameter = 5, RULE_argument_list = 6, 
		RULE_main = 7, RULE_pattern = 8, RULE_match = 9, RULE_block = 10, RULE_puts = 11, 
		RULE_push = 12, RULE_len = 13, RULE_chop = 14, RULE_chomp = 15, RULE_loop = 16, 
		RULE_do_loop = 17, RULE_loop_body = 18, RULE_for_loop = 19, RULE_range = 20, 
		RULE_list = 21, RULE_list_data = 22, RULE_list_access = 23, RULE_control_structure = 24, 
		RULE_break = 25, RULE_break_if = 26, RULE_next = 27, RULE_next_if = 28, 
		RULE_condition = 29, RULE_if_condition = 30, RULE_elseif_condition = 31, 
		RULE_else_condition = 32, RULE_return_stat = 33, RULE_function_call = 34, 
		RULE_function_pointer = 35, RULE_assignment = 36, RULE_statement = 37, 
		RULE_expression = 38, RULE_append_expresstion = 39, RULE_append_expression_ = 40, 
		RULE_or_expression = 41, RULE_or_expression_ = 42, RULE_and_expression = 43, 
		RULE_and_expression_ = 44, RULE_eq_expression = 45, RULE_eq_expression_ = 46, 
		RULE_compare_expression = 47, RULE_compare_expression_ = 48, RULE_add_sub_expression = 49, 
		RULE_add_sub_expression_ = 50, RULE_mul_div_expression = 51, RULE_mul_div_expression_ = 52, 
		RULE_unary_expression = 53, RULE_other_expression = 54, RULE_boolean_literal = 55, 
		RULE_literal = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "function", "lambda_function", "parameter_list", "default_parameter_list", 
			"default_parameter", "argument_list", "main", "pattern", "match", "block", 
			"puts", "push", "len", "chop", "chomp", "loop", "do_loop", "loop_body", 
			"for_loop", "range", "list", "list_data", "list_access", "control_structure", 
			"break", "break_if", "next", "next_if", "condition", "if_condition", 
			"elseif_condition", "else_condition", "return_stat", "function_call", 
			"function_pointer", "assignment", "statement", "expression", "append_expresstion", 
			"append_expression_", "or_expression", "or_expression_", "and_expression", 
			"and_expression_", "eq_expression", "eq_expression_", "compare_expression", 
			"compare_expression_", "add_sub_expression", "add_sub_expression_", "mul_div_expression", 
			"mul_div_expression_", "unary_expression", "other_expression", "boolean_literal", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'end'", "'main'", "'return'", "'if'", "'else'", "'elseif'", 
			"'true'", "'false'", "'chop'", "'chomp'", "'push'", "'puts'", "'method'", 
			"'len'", "'loop'", "'do'", "'for'", "'in'", "'pattern'", "'match'", "'next'", 
			"'break'", "'->'", null, null, null, null, "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='", "'!='", "'<'", 
			"'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", "'<<'", "'++'", "'--'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'..'", "';'", "':'", 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "END", "MAIN", "RETURN", "IF", "ELSE", "ELSEIF", "TRUE", 
			"FALSE", "CHOP", "CHOMP", "PUSH", "PUTS", "METHOD", "LEN", "LOOP", "DO", 
			"FOR", "IN", "PATTERN", "MATCH", "NEXT", "BREAK", "LAMBDA", "ID", "INT_LITERAL", 
			"FLOAT_LITERAL", "STRING_LITERAL", "ASSIGN_ADD", "ASSIGN_SUB", "ASSIGN_MUL", 
			"ASSIGN_DIV", "ASSIGN_MOD", "ADD", "SUB", "MUL", "DIV", "MOD", "ASSIGN", 
			"EQL", "NEQ", "LESS", "GREATER", "LEQ", "GEQ", "AND", "OR", "NOT", "APPEND", 
			"INC", "DEC", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
			"LEFT_CUR_BRACKET", "RIGHT_CUR_BRACKET", "COMMA", "RANGE_DOT", "SEMICOLON", 
			"COLON", "DOT", "COMMENT", "WS", "PATTERN_INDENT", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(116);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DEF:
						{
						setState(114);
						function();
						}
						break;
					case PATTERN:
						{
						setState(115);
						pattern();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(121);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FunctionCraftParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(FunctionCraftParser.RIGHT_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode ID() { return getToken(FunctionCraftParser.ID, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(DEF);
			setState(124);
			((FunctionContext)_localctx).name = match(ID);
			 System.out.println("FunctionDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null)); 
			setState(126);
			match(LEFT_PAREN);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(127);
				parameter_list();
				}
			}

			setState(130);
			match(RIGHT_PAREN);
			setState(131);
			block();
			setState(132);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lambda_functionContext extends ParserRuleContext {
		public TerminalNode LAMBDA() { return getToken(FunctionCraftParser.LAMBDA, 0); }
		public List<TerminalNode> LEFT_PAREN() { return getTokens(FunctionCraftParser.LEFT_PAREN); }
		public TerminalNode LEFT_PAREN(int i) {
			return getToken(FunctionCraftParser.LEFT_PAREN, i);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public List<TerminalNode> RIGHT_PAREN() { return getTokens(FunctionCraftParser.RIGHT_PAREN); }
		public TerminalNode RIGHT_PAREN(int i) {
			return getToken(FunctionCraftParser.RIGHT_PAREN, i);
		}
		public TerminalNode LEFT_CUR_BRACKET() { return getToken(FunctionCraftParser.LEFT_CUR_BRACKET, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHT_CUR_BRACKET() { return getToken(FunctionCraftParser.RIGHT_CUR_BRACKET, 0); }
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Lambda_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterLambda_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitLambda_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitLambda_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lambda_functionContext lambda_function() throws RecognitionException {
		Lambda_functionContext _localctx = new Lambda_functionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lambda_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(LAMBDA);
			 System.out.println("Structure: LAMBDA"); 
			setState(136);
			match(LEFT_PAREN);
			setState(137);
			parameter_list();
			setState(138);
			match(RIGHT_PAREN);
			setState(139);
			match(LEFT_CUR_BRACKET);
			setState(140);
			block();
			setState(141);
			match(RIGHT_CUR_BRACKET);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_PAREN) {
				{
				setState(142);
				match(LEFT_PAREN);
				setState(143);
				argument_list();
				setState(144);
				match(RIGHT_PAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parameter_listContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(FunctionCraftParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FunctionCraftParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public Default_parameter_listContext default_parameter_list() {
			return getRuleContext(Default_parameter_listContext.class,0);
		}
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterParameter_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitParameter_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitParameter_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameter_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ID);
			setState(153);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					match(COMMA);
					setState(150);
					match(ID);
					}
					} 
				}
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(156);
				match(COMMA);
				setState(157);
				default_parameter_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Default_parameter_listContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(FunctionCraftParser.LEFT_BRACKET, 0); }
		public List<Default_parameterContext> default_parameter() {
			return getRuleContexts(Default_parameterContext.class);
		}
		public Default_parameterContext default_parameter(int i) {
			return getRuleContext(Default_parameterContext.class,i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(FunctionCraftParser.RIGHT_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public Default_parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default_parameter_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterDefault_parameter_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitDefault_parameter_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitDefault_parameter_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Default_parameter_listContext default_parameter_list() throws RecognitionException {
		Default_parameter_listContext _localctx = new Default_parameter_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_default_parameter_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(LEFT_BRACKET);
			setState(161);
			default_parameter();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(162);
				match(COMMA);
				setState(163);
				default_parameter();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Default_parameterContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FunctionCraftParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(FunctionCraftParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Default_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterDefault_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitDefault_parameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitDefault_parameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Default_parameterContext default_parameter() throws RecognitionException {
		Default_parameterContext _localctx = new Default_parameterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_default_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(ID);
			setState(172);
			match(ASSIGN);
			setState(173);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Argument_listContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public Argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterArgument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitArgument_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitArgument_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Argument_listContext argument_list() throws RecognitionException {
		Argument_listContext _localctx = new Argument_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argument_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			expression();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(176);
				match(COMMA);
				setState(177);
				expression();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
